// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrationsStateActionMachine logs state transitions, messages in state.logs and action responses when reaching DONE 1`] = `
Object {
  "debug": Array [
    Array [
      "[.my-so-index] INIT RESPONSE",
      Object {
        "_tag": "Right",
        "right": "response",
      },
    ],
    Array [
      "[.my-so-index] INIT -> LEGACY_REINDEX. took: 0ms.",
      Object {
        "kibana": Object {
          "migrations": Object {
            "duration": 0,
            "state": Object {
              "batchSize": 1000,
              "controlState": "LEGACY_REINDEX",
              "currentAlias": ".my-so-index",
              "excludeFromUpgradeFilterHooks": Object {},
              "indexPrefix": ".my-so-index",
              "kibanaVersion": "7.11.0",
              "knownTypes": Array [],
              "legacyIndex": ".my-so-index",
              "logs": Array [
                Object {
                  "level": "info",
                  "message": "Log from LEGACY_REINDEX control state",
                },
              ],
              "maxBatchSizeBytes": 100000000,
              "migrationDocLinks": Object {
                "resolveMigrationFailures": "https://www.elastic.co/guide/en/kibana/test-branch/resolve-migrations-failures.html",
              },
              "outdatedDocuments": Array [],
              "outdatedDocumentsQuery": Object {
                "bool": Object {
                  "should": Array [],
                },
              },
              "preMigrationScript": Object {
                "_tag": "None",
              },
              "retryAttempts": 5,
              "retryCount": 0,
              "retryDelay": 0,
              "targetIndexMappings": Object {
                "properties": Object {},
              },
              "tempIndex": ".my-so-index_7.11.0_reindex_temp",
              "tempIndexMappings": Object {
                "dynamic": false,
                "properties": Object {
                  "migrationVersion": Object {
                    "dynamic": "true",
                    "type": "object",
                  },
                  "type": Object {
                    "type": "keyword",
                  },
                },
              },
              "transformedDocBatches": Array [],
              "unusedTypesQuery": Object {
                "bool": Object {
                  "must_not": Array [
                    Object {
                      "term": Object {
                        "type": "apm-services-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "background-session",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "cases-sub-case",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "file-upload-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-actions",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-events",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agents",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-enrollment-api-keys",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "ml-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "osquery-usage-metric",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "server",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "siem-detection-engine-rule-status",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "timelion-sheet",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "tsvb-validation-telemetry",
                      },
                    },
                    Object {
                      "bool": Object {
                        "must": Array [
                          Object {
                            "match": Object {
                              "type": "search-session",
                            },
                          },
                          Object {
                            "match": Object {
                              "search-session.persisted": false,
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
              "versionAlias": ".my-so-index_7.11.0",
              "versionIndex": ".my-so-index_7.11.0_001",
            },
          },
        },
      },
    ],
    Array [
      "[.my-so-index] LEGACY_REINDEX RESPONSE",
      Object {
        "_tag": "Right",
        "right": "response",
      },
    ],
    Array [
      "[.my-so-index] LEGACY_REINDEX -> LEGACY_DELETE. took: 0ms.",
      Object {
        "kibana": Object {
          "migrations": Object {
            "duration": 0,
            "state": Object {
              "batchSize": 1000,
              "controlState": "LEGACY_DELETE",
              "currentAlias": ".my-so-index",
              "excludeFromUpgradeFilterHooks": Object {},
              "indexPrefix": ".my-so-index",
              "kibanaVersion": "7.11.0",
              "knownTypes": Array [],
              "legacyIndex": ".my-so-index",
              "logs": Array [
                Object {
                  "level": "info",
                  "message": "Log from LEGACY_REINDEX control state",
                },
                Object {
                  "level": "info",
                  "message": "Log from LEGACY_DELETE control state",
                },
              ],
              "maxBatchSizeBytes": 100000000,
              "migrationDocLinks": Object {
                "resolveMigrationFailures": "https://www.elastic.co/guide/en/kibana/test-branch/resolve-migrations-failures.html",
              },
              "outdatedDocuments": Array [],
              "outdatedDocumentsQuery": Object {
                "bool": Object {
                  "should": Array [],
                },
              },
              "preMigrationScript": Object {
                "_tag": "None",
              },
              "retryAttempts": 5,
              "retryCount": 0,
              "retryDelay": 0,
              "targetIndexMappings": Object {
                "properties": Object {},
              },
              "tempIndex": ".my-so-index_7.11.0_reindex_temp",
              "tempIndexMappings": Object {
                "dynamic": false,
                "properties": Object {
                  "migrationVersion": Object {
                    "dynamic": "true",
                    "type": "object",
                  },
                  "type": Object {
                    "type": "keyword",
                  },
                },
              },
              "transformedDocBatches": Array [],
              "unusedTypesQuery": Object {
                "bool": Object {
                  "must_not": Array [
                    Object {
                      "term": Object {
                        "type": "apm-services-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "background-session",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "cases-sub-case",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "file-upload-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-actions",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-events",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agents",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-enrollment-api-keys",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "ml-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "osquery-usage-metric",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "server",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "siem-detection-engine-rule-status",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "timelion-sheet",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "tsvb-validation-telemetry",
                      },
                    },
                    Object {
                      "bool": Object {
                        "must": Array [
                          Object {
                            "match": Object {
                              "type": "search-session",
                            },
                          },
                          Object {
                            "match": Object {
                              "search-session.persisted": false,
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
              "versionAlias": ".my-so-index_7.11.0",
              "versionIndex": ".my-so-index_7.11.0_001",
            },
          },
        },
      },
    ],
    Array [
      "[.my-so-index] LEGACY_DELETE RESPONSE",
      Object {
        "_tag": "Right",
        "right": "response",
      },
    ],
    Array [
      "[.my-so-index] LEGACY_DELETE -> LEGACY_DELETE. took: 0ms.",
      Object {
        "kibana": Object {
          "migrations": Object {
            "duration": 0,
            "state": Object {
              "batchSize": 1000,
              "controlState": "LEGACY_DELETE",
              "currentAlias": ".my-so-index",
              "excludeFromUpgradeFilterHooks": Object {},
              "indexPrefix": ".my-so-index",
              "kibanaVersion": "7.11.0",
              "knownTypes": Array [],
              "legacyIndex": ".my-so-index",
              "logs": Array [
                Object {
                  "level": "info",
                  "message": "Log from LEGACY_REINDEX control state",
                },
                Object {
                  "level": "info",
                  "message": "Log from LEGACY_DELETE control state",
                },
                Object {
                  "level": "info",
                  "message": "Log from LEGACY_DELETE control state",
                },
              ],
              "maxBatchSizeBytes": 100000000,
              "migrationDocLinks": Object {
                "resolveMigrationFailures": "https://www.elastic.co/guide/en/kibana/test-branch/resolve-migrations-failures.html",
              },
              "outdatedDocuments": Array [],
              "outdatedDocumentsQuery": Object {
                "bool": Object {
                  "should": Array [],
                },
              },
              "preMigrationScript": Object {
                "_tag": "None",
              },
              "retryAttempts": 5,
              "retryCount": 0,
              "retryDelay": 0,
              "targetIndexMappings": Object {
                "properties": Object {},
              },
              "tempIndex": ".my-so-index_7.11.0_reindex_temp",
              "tempIndexMappings": Object {
                "dynamic": false,
                "properties": Object {
                  "migrationVersion": Object {
                    "dynamic": "true",
                    "type": "object",
                  },
                  "type": Object {
                    "type": "keyword",
                  },
                },
              },
              "transformedDocBatches": Array [],
              "unusedTypesQuery": Object {
                "bool": Object {
                  "must_not": Array [
                    Object {
                      "term": Object {
                        "type": "apm-services-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "background-session",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "cases-sub-case",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "file-upload-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-actions",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-events",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agents",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-enrollment-api-keys",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "ml-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "osquery-usage-metric",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "server",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "siem-detection-engine-rule-status",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "timelion-sheet",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "tsvb-validation-telemetry",
                      },
                    },
                    Object {
                      "bool": Object {
                        "must": Array [
                          Object {
                            "match": Object {
                              "type": "search-session",
                            },
                          },
                          Object {
                            "match": Object {
                              "search-session.persisted": false,
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
              "versionAlias": ".my-so-index_7.11.0",
              "versionIndex": ".my-so-index_7.11.0_001",
            },
          },
        },
      },
    ],
    Array [
      "[.my-so-index] LEGACY_DELETE RESPONSE",
      Object {
        "_tag": "Right",
        "right": "response",
      },
    ],
    Array [
      "[.my-so-index] LEGACY_DELETE -> DONE. took: 0ms.",
      Object {
        "kibana": Object {
          "migrations": Object {
            "duration": 0,
            "state": Object {
              "batchSize": 1000,
              "controlState": "DONE",
              "currentAlias": ".my-so-index",
              "excludeFromUpgradeFilterHooks": Object {},
              "indexPrefix": ".my-so-index",
              "kibanaVersion": "7.11.0",
              "knownTypes": Array [],
              "legacyIndex": ".my-so-index",
              "logs": Array [
                Object {
                  "level": "info",
                  "message": "Log from LEGACY_REINDEX control state",
                },
                Object {
                  "level": "info",
                  "message": "Log from LEGACY_DELETE control state",
                },
                Object {
                  "level": "info",
                  "message": "Log from LEGACY_DELETE control state",
                },
                Object {
                  "level": "info",
                  "message": "Log from DONE control state",
                },
              ],
              "maxBatchSizeBytes": 100000000,
              "migrationDocLinks": Object {
                "resolveMigrationFailures": "https://www.elastic.co/guide/en/kibana/test-branch/resolve-migrations-failures.html",
              },
              "outdatedDocuments": Array [],
              "outdatedDocumentsQuery": Object {
                "bool": Object {
                  "should": Array [],
                },
              },
              "preMigrationScript": Object {
                "_tag": "None",
              },
              "retryAttempts": 5,
              "retryCount": 0,
              "retryDelay": 0,
              "targetIndexMappings": Object {
                "properties": Object {},
              },
              "tempIndex": ".my-so-index_7.11.0_reindex_temp",
              "tempIndexMappings": Object {
                "dynamic": false,
                "properties": Object {
                  "migrationVersion": Object {
                    "dynamic": "true",
                    "type": "object",
                  },
                  "type": Object {
                    "type": "keyword",
                  },
                },
              },
              "transformedDocBatches": Array [],
              "unusedTypesQuery": Object {
                "bool": Object {
                  "must_not": Array [
                    Object {
                      "term": Object {
                        "type": "apm-services-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "background-session",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "cases-sub-case",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "file-upload-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-actions",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-events",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agents",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-enrollment-api-keys",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "ml-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "osquery-usage-metric",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "server",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "siem-detection-engine-rule-status",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "timelion-sheet",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "tsvb-validation-telemetry",
                      },
                    },
                    Object {
                      "bool": Object {
                        "must": Array [
                          Object {
                            "match": Object {
                              "type": "search-session",
                            },
                          },
                          Object {
                            "match": Object {
                              "search-session.persisted": false,
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
              "versionAlias": ".my-so-index_7.11.0",
              "versionIndex": ".my-so-index_7.11.0_001",
            },
          },
        },
      },
    ],
  ],
  "error": Array [],
  "fatal": Array [],
  "info": Array [
    Array [
      "[.my-so-index] Log from LEGACY_REINDEX control state",
    ],
    Array [
      "[.my-so-index] INIT -> LEGACY_REINDEX. took: 0ms.",
    ],
    Array [
      "[.my-so-index] Log from LEGACY_DELETE control state",
    ],
    Array [
      "[.my-so-index] LEGACY_REINDEX -> LEGACY_DELETE. took: 0ms.",
    ],
    Array [
      "[.my-so-index] Log from LEGACY_DELETE control state",
    ],
    Array [
      "[.my-so-index] LEGACY_DELETE -> LEGACY_DELETE. took: 0ms.",
    ],
    Array [
      "[.my-so-index] Log from DONE control state",
    ],
    Array [
      "[.my-so-index] LEGACY_DELETE -> DONE. took: 0ms.",
    ],
  ],
  "log": Array [],
  "trace": Array [],
  "warn": Array [],
}
`;

exports[`migrationsStateActionMachine logs state transitions, messages in state.logs and action responses when reaching FATAL 1`] = `
Object {
  "debug": Array [
    Array [
      "[.my-so-index] INIT RESPONSE",
      Object {
        "_tag": "Right",
        "right": "response",
      },
    ],
    Array [
      "[.my-so-index] INIT -> LEGACY_DELETE. took: 0ms.",
      Object {
        "kibana": Object {
          "migrations": Object {
            "duration": 0,
            "state": Object {
              "batchSize": 1000,
              "controlState": "LEGACY_DELETE",
              "currentAlias": ".my-so-index",
              "excludeFromUpgradeFilterHooks": Object {},
              "indexPrefix": ".my-so-index",
              "kibanaVersion": "7.11.0",
              "knownTypes": Array [],
              "legacyIndex": ".my-so-index",
              "logs": Array [
                Object {
                  "level": "info",
                  "message": "Log from LEGACY_DELETE control state",
                },
              ],
              "maxBatchSizeBytes": 100000000,
              "migrationDocLinks": Object {
                "resolveMigrationFailures": "https://www.elastic.co/guide/en/kibana/test-branch/resolve-migrations-failures.html",
              },
              "outdatedDocuments": Array [
                Object {
                  "_id": "1234",
                },
              ],
              "outdatedDocumentsQuery": Object {
                "bool": Object {
                  "should": Array [],
                },
              },
              "preMigrationScript": Object {
                "_tag": "None",
              },
              "reason": "the fatal reason",
              "retryAttempts": 5,
              "retryCount": 0,
              "retryDelay": 0,
              "targetIndexMappings": Object {
                "properties": Object {},
              },
              "tempIndex": ".my-so-index_7.11.0_reindex_temp",
              "tempIndexMappings": Object {
                "dynamic": false,
                "properties": Object {
                  "migrationVersion": Object {
                    "dynamic": "true",
                    "type": "object",
                  },
                  "type": Object {
                    "type": "keyword",
                  },
                },
              },
              "transformedDocBatches": Array [
                Array [
                  Object {
                    "_id": "1234",
                  },
                ],
              ],
              "unusedTypesQuery": Object {
                "bool": Object {
                  "must_not": Array [
                    Object {
                      "term": Object {
                        "type": "apm-services-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "background-session",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "cases-sub-case",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "file-upload-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-actions",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-events",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agents",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-enrollment-api-keys",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "ml-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "osquery-usage-metric",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "server",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "siem-detection-engine-rule-status",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "timelion-sheet",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "tsvb-validation-telemetry",
                      },
                    },
                    Object {
                      "bool": Object {
                        "must": Array [
                          Object {
                            "match": Object {
                              "type": "search-session",
                            },
                          },
                          Object {
                            "match": Object {
                              "search-session.persisted": false,
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
              "versionAlias": ".my-so-index_7.11.0",
              "versionIndex": ".my-so-index_7.11.0_001",
            },
          },
        },
      },
    ],
    Array [
      "[.my-so-index] LEGACY_DELETE RESPONSE",
      Object {
        "_tag": "Right",
        "right": "response",
      },
    ],
    Array [
      "[.my-so-index] LEGACY_DELETE -> FATAL. took: 0ms.",
      Object {
        "kibana": Object {
          "migrations": Object {
            "duration": 0,
            "state": Object {
              "batchSize": 1000,
              "controlState": "FATAL",
              "currentAlias": ".my-so-index",
              "excludeFromUpgradeFilterHooks": Object {},
              "indexPrefix": ".my-so-index",
              "kibanaVersion": "7.11.0",
              "knownTypes": Array [],
              "legacyIndex": ".my-so-index",
              "logs": Array [
                Object {
                  "level": "info",
                  "message": "Log from LEGACY_DELETE control state",
                },
                Object {
                  "level": "info",
                  "message": "Log from FATAL control state",
                },
              ],
              "maxBatchSizeBytes": 100000000,
              "migrationDocLinks": Object {
                "resolveMigrationFailures": "https://www.elastic.co/guide/en/kibana/test-branch/resolve-migrations-failures.html",
              },
              "outdatedDocuments": Array [
                Object {
                  "_id": "1234",
                },
              ],
              "outdatedDocumentsQuery": Object {
                "bool": Object {
                  "should": Array [],
                },
              },
              "preMigrationScript": Object {
                "_tag": "None",
              },
              "reason": "the fatal reason",
              "retryAttempts": 5,
              "retryCount": 0,
              "retryDelay": 0,
              "targetIndexMappings": Object {
                "properties": Object {},
              },
              "tempIndex": ".my-so-index_7.11.0_reindex_temp",
              "tempIndexMappings": Object {
                "dynamic": false,
                "properties": Object {
                  "migrationVersion": Object {
                    "dynamic": "true",
                    "type": "object",
                  },
                  "type": Object {
                    "type": "keyword",
                  },
                },
              },
              "transformedDocBatches": Array [
                Array [
                  Object {
                    "_id": "1234",
                  },
                ],
              ],
              "unusedTypesQuery": Object {
                "bool": Object {
                  "must_not": Array [
                    Object {
                      "term": Object {
                        "type": "apm-services-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "background-session",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "cases-sub-case",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "file-upload-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-actions",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agent-events",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-agents",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "fleet-enrollment-api-keys",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "ml-telemetry",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "osquery-usage-metric",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "server",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "siem-detection-engine-rule-status",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "timelion-sheet",
                      },
                    },
                    Object {
                      "term": Object {
                        "type": "tsvb-validation-telemetry",
                      },
                    },
                    Object {
                      "bool": Object {
                        "must": Array [
                          Object {
                            "match": Object {
                              "type": "search-session",
                            },
                          },
                          Object {
                            "match": Object {
                              "search-session.persisted": false,
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
              "versionAlias": ".my-so-index_7.11.0",
              "versionIndex": ".my-so-index_7.11.0_001",
            },
          },
        },
      },
    ],
  ],
  "error": Array [],
  "fatal": Array [],
  "info": Array [
    Array [
      "[.my-so-index] Log from LEGACY_DELETE control state",
    ],
    Array [
      "[.my-so-index] INIT -> LEGACY_DELETE. took: 0ms.",
    ],
    Array [
      "[.my-so-index] Log from FATAL control state",
    ],
    Array [
      "[.my-so-index] LEGACY_DELETE -> FATAL. took: 0ms.",
    ],
  ],
  "log": Array [],
  "trace": Array [],
  "warn": Array [],
}
`;
